--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "leveldown": "^0.10.4",
     "levelup": "^0.19.0",
     "lodash": "^3.8.0",
+    "prismjs": "0.0.1",
     "react": "^0.13.1",
     "react-ace": "^1.1.7",
     "request": "^2.55.0",
